--- a/assets/css/media_styles.css
+++ b/assets/css/media_styles.css
@@ -10,7 +10,7 @@
 
 @media screen and (max-width: 1230px) {
 	:root {
-		--padding_left: 80px;
+		--x_padding: 80px;
 	}
 	.hero_img img {
 		height: 500px;
@@ -20,7 +20,7 @@
 
 @media screen and (max-width: 1000px) {
 	:root {
-		--padding_left: 40px;
+		--x_padding: 40px;
 	}
 	.write_up {
 		width: 70%;
@@ -56,7 +56,7 @@
 }
 @media screen and (max-width: 805px) {
 	:root {
-		--padding_left: 20px;
+		--x_padding: 20px;
 	}
 }
 @media screen and (max-width: 805px) {
@@ -68,7 +68,7 @@
 
 @media screen and (max-width: 750px) {
 	#hero {
-		padding-right: var(--padding_left) !important;
+		padding-right: var(--x_padding) !important;
 	}
 	.hero_text {
 		margin-top: 49px;
@@ -190,13 +190,13 @@
 
 @media screen and (max-width: 458px) {
 	:root {
-		--padding_left: 14px;
+		--x_padding: 14px;
 	}
 	#q_ship_form {
 		width: 100%;
 	}
 	#contact {
-		padding-right: var(--padding_left) !important;
+		padding-right: var(--x_padding) !important;
 	}
 	#contact > div {
 		width: 100%;
